--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
             <version>8.0.29</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.7</version>
+        </dependency>
+
     </dependencies>
 
 </project>
